--- a/res/color/green_button.xml
+++ b/res/color/green_button.xml
@@ -1,37 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" >
-        <shape>
-            <solid
-                android:color="#99cc00" />
-            <stroke
-                android:width="1dp"
-                android:color="#669900" />
-            <corners
-                android:radius="3dp" />
-            <padding
-                android:left="10dp"
-                android:top="10dp"
-                android:right="10dp"
-                android:bottom="10dp" />
-        </shape>
-    </item>
-    <item>
-        <shape>
-            <gradient
-                android:startColor="#99cc00"
-                android:endColor="#669900"
-                android:angle="270" />
-            <stroke
-                android:width="1dp"
-                android:color="#99cc00" />
-            <corners
-                android:radius="4dp" />
-            <padding
-                android:left="10dp"
-                android:top="10dp"
-                android:right="10dp"
-                android:bottom="10dp" />
-        </shape>
-    </item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:drawable="@android:color/holo_green_dark"
+          android:state_pressed="true" />
+    <item android:drawable="@android:color/holo_green_dark"
+          android:state_focused="true" />
+    <item android:drawable="@android:color/holo_green_light" />
 </selector>
