--- a/res/color/grey_button.xml
+++ b/res/color/grey_button.xml
@@ -3,10 +3,10 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#808080" />
+                android:color="#C4CAC3" />
             <stroke
                 android:width="1dp"
-                android:color="#C0C0C0" />
+                android:color="#C4CAC3" />
             <corners
                 android:radius="3dp" />
             <padding
@@ -19,12 +19,12 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#808080"
-                android:endColor="#C0C0C0"
+                android:startColor="#C4CAC3"
+                android:endColor="#C4CAC3"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#C0C0C0" />
+                android:color="#C4CAC3" />
             <corners
                 android:radius="4dp" />
             <padding
