--- a/res/color/pink_button.xml
+++ b/res/color/pink_button.xml
@@ -3,10 +3,10 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#FF64C0" />
+                android:color="#E32551" />
             <stroke
                 android:width="1dp"
-                android:color="#FFA9C0" />
+                android:color="#E32551" />
             <corners
                 android:radius="3dp" />
             <padding
@@ -19,12 +19,12 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#FF64C0"
-                android:endColor="#FFA9C0"
+                android:startColor="#E32551"
+                android:endColor="#E32551"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#FFA9C0" />
+                android:color="#E32551" />
             <corners
                 android:radius="4dp" />
             <padding
