--- a/res/color/white_button.xml
+++ b/res/color/white_button.xml
@@ -3,10 +3,10 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#00C8FF" />
+                android:color="#4C4C4C" />
             <stroke
                 android:width="1dp"
-                android:color="#00C8FF" />
+                android:color="#4C4C4C" />
             <corners
                 android:radius="3dp" />
             <padding
@@ -18,13 +18,14 @@
     </item>
     <item>
         <shape>
+
             <gradient
-                android:startColor="#00C8FF"
-                android:endColor="#00C8FF"
+                android:startColor="#4C4C4C"
+                android:endColor="#4C4C4C"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#00C8FF" />
+                android:color="#4C4C4C" />
             <corners
                 android:radius="4dp" />
             <padding
